# sanders-customer-platform-cdk-infra

./: .gitignore  Dockerfile.example  README.md  app.py  budget-config.json  cdk.json  pyproject.toml
cdk/: __init__.py  sanders_customer_platform_stack.py
cdk/constructs/: __init__.py  batch_environment.py  batch_iam_roles.py  dynamodb_table.py  ecr_repository.py  s3_bucket.py  stepfunctions_statemachine.py  vpc_network.py
tests/unit/: test_sanders_stack.py
